syntax="proto3";

package ds_udfs;

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
//import "google/protobuf/timestamp.proto";


message DsUdfs {
    string id=1;
    int32 user_id=2;
    optional int32 ip=3;
    // google.protobuf.Timestamp last_login_time=4 ;
    optional string last_login_time=4 ;
}

// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsUdfsService {
  rpc ListDsUdfs(ListDsUdfsRequest) returns (ListDsUdfsResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/dsudfs"
    };
  }

  rpc GetDsUdfs(GetDsUdfsRequest) returns (DsUdfs) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=dsudfs/*}"
    };
  }

  rpc CreateDsUdfs(CreateDsUdfsRequest) returns (DsUdfs) {
    option (google.api.http) = {
      post: "/v1alpha1/dsudfs"
      body: "dssession"
    };
  }

  rpc UpdateDsUdfs(UpdateDsUdfsRequest) returns (DsUdfs) {
    option (google.api.http) = {
      patch: "/v1alpha1/{dssession.name=dsudfs/*}"
      body: "dssession"
    };
  }

  rpc DeleteDsUdfs(DeleteDsUdfsRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=dsudfs/*}"
    };
  }
}

// message DsUdfs {
// ! This should be defined elsewhere
// }

message ListDsUdfsRequest {
  // The parent resource name, for example, "shelves/shelf1"
  string parent = 1;

  // The maximum number of items to return.
  int32 page_size = 2;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 3;
}

message ListDsUdfsResponse {
  // The field name should match the noun "dssession" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsUdfs dsudfs = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDsUdfsRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsUdfsRequest {
  // The parent resource name where the dssession is to be created.
  string parent = 1;

  // The dssession id to use for this dssession.
  string dssession_id = 2;

  // The dssession resource to create.
  // The field name should match the Noun in the method name.
  DsUdfs dssession = 3;
}

message UpdateDsUdfsRequest {
  // The dssession resource which replaces the resource on the server.
  DsUdfs dssession = 1;

  // The update mask applies to the resource. For the `FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#fieldmask
   google.protobuf.FieldMask update_mask = 2;
}

message DeleteDsUdfsRequest {
  // The resource name of the dssession to be deleted.
  string name = 1;
}
